force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/smagicinteract__Rule_Criteria__mdt.object-meta.xml
<CustomObject>
    <description>It will store the criteria conditions of a routing rule.</description>
    <label>Rule Criteria</label>
    <pluralLabel>Rule Criterias</pluralLabel>
</CustomObject>