force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/fields/smagicinteract__Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Condition_Type__c</fullName>
    <description>This will store primary criteria option</description>
    <inlineHelpText>This will store primary criteria option</inlineHelpText>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>ConverseApp</fullName>
                <label>Converse App</label>
            </value>
            <value>
                <fullName>SenderId</fullName>
                <label>Sender Id</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>