force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/fields/smagicinteract__Operand_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Operand_Name__c</fullName>
    <label>Operand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>