force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/fields/smagicinteract__Operand_Value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Operand_Value__c</fullName>
    <label>Operand Value</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>