force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/fields/smagicinteract__Operator__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Operator__c</fullName>
    <description>It will store the comparison and matching operators.</description>
    <inlineHelpText>It will store the comparison and matching operators.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
            <value>
                <fullName>within</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>