force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/fields/smagicinteract__Order__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Order__c</fullName>
    <description>This field will be used to store order of conditions.</description>
    <inlineHelpText>This field will be used to store order of conditions.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>