force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/fields/smagicinteract__Routing_Rule__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Routing_Rule__c</fullName>
    <description>This field will be related to &apos;Routing Rule&apos; object</description>
    <inlineHelpText>This field will be related to &apos;Routing Rule&apos; object</inlineHelpText>
    <label>Routing Rule</label>
    <referenceTo>smagicinteract__Routing_Rule__mdt</referenceTo>
    <relationshipLabel>Rule Criterias</relationshipLabel>
    <relationshipName>Rule_Criterias</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>