force-app/main/default/objects/smagicinteract__Rule_Criteria__mdt/fields/smagicinteract__Target_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Target_Field__c</fullName>
    <description>Dependent on Entity name, It will store the field name</description>
    <inlineHelpText>Dependent on Entity name, It will store the field name</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>